# nixd

./: .clang-tidy  .gitignore  ASTReader_8cpp.html  ASTReader_8cpp_source.html  ASTReader_8h.html  ASTReader_8h_source.html  AST_8cpp.html  AST_8cpp_source.html  AST_8h.html  AST_8h_source.html  AddToFormals_8cpp.html  AddToFormals_8cpp_source.html  AddToFormals_8h.html  AddToFormals_8h_source.html  ArrayRef_8h.html  ArrayRef_8h_source.html  AttrName_8cpp.html  AttrName_8cpp_source.html  AttrName_8h.html  AttrName_8h_source.html  AttrSetClient_8cpp.html  AttrSetClient_8cpp_source.html  AttrSetClient_8h.html  AttrSetClient_8h_source.html  AttrSetProvider_8cpp.html  AttrSetProvider_8cpp_source.html  AttrSetProvider_8h.html  AttrSetProvider_8h_source.html  AttrSet_8cpp.html  AttrSet_8cpp_source.html  AttrSet_8h.html  AttrSet_8h_source.html  Attrs_8h.html  Attrs_8h_source.html  AutoCloseFD_8cpp.html  AutoCloseFD_8cpp_source.html  AutoCloseFD_8h.html  AutoCloseFD_8h_source.html  AutoHUPPID_8h.html  AutoHUPPID_8h_source.html  (+2108 more)
common/: meson.build
common/lib/CommandLine/: Options.cpp
common/lib/Eval/: AttrSetProvider.cpp  Spawn.cpp
common/lib/Protocol/: AttrSet.cpp
common/subprojects/: nixd-lspserver
common/tools/: meson.build
cpp-tree-sitter/: meson.build
cpp-tree-sitter/include/ts/: TSNode.h  TSParser.h  TSParserPtr.h  TSTreePtr.h
lib/lspserver/: README.md  meson.build
lib/lspserver/src/: Connection.cpp  DraftStore.cpp  LSPServer.cpp  Logger.cpp  Protocol.cpp  SourceCode.cpp  URI.cpp
lib/nixd/: meson.build
lib/nixd/src/: AST.cpp  CallbackExpr.cpp  Diagnostic.cpp  EvalDraftStore.cpp  Expr.cpp  JSONSerialization.cpp  Scheduler.cpp  Server.cpp  ServerController.cpp  ServerEval.cpp  ServerNixWorker.cpp  ServerOption.cpp  ServerSerialization.cpp  ServerStatic.cpp  ServerWorker.cpp
lib/nixd/test/: ast.cpp  diagnostic.cpp  evalDraftStore.cpp  expr.cpp  parser.cpp  scheduler.cpp  server.cpp
libbc/: meson.build
libbc/include/bc/: Read.h  Write.h
libbc/src/: Read.cpp  Write.cpp
libnixbc/: README.md  meson.build
libnixbc/include/nixbc/: Deserialize.h  FileHeader.h  Nodes.h  Origin.h  Serialize.h  Type.h
libnixbc/src/: Deserialize.cpp  Origin.cpp  Serialize.cpp
libnixf/: .clang-tidy  README.md  default.nix  flake.nix  meson.build  shell.nix
libnixf/.github/workflows/: nix-build.yml
libnixf/include/nixf/: Diagnostic.h  DiagnosticEngine.h  Nodes.h  Parser.h  Range.h
libnixf/lib/: Diagnostic.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Token.h  meson.build
libnixf/lib/Basic/: Diagnostic.cpp  meson.build
libnixf/lib/Lex/: Lexer.cpp  meson.build
libnixf/lib/Parse/: Lexer.cpp  Lexer.h  Parser.cpp  RangeBuilder.h  Token.h  meson.build
libnixf/lib/Syntax/: RawSyntax.cpp  Syntax.cpp  SyntaxData.cpp  Trivia.cpp  meson.build
libnixf/lib/test/: Lexer.cpp  Parser.cpp
libnixf/src/: meson.build
libnixf/src/Basic/: Diagnostic.cpp  Diagnostic.cpp.py  DiagnosticEnum.h.py  JSONDiagnostic.cpp  Nodes.cpp  PrimOpsInfoGen.cpp  diagnostic.py  support.py
libnixf/src/Bytecode/: Write.cpp  Write.h
libnixf/src/Parse/: Lexer.cpp  Lexer.h  ParseAttrs.cpp  ParseExpr.cpp  ParseLambda.cpp  ParseOp.cpp  ParseSimple.cpp  ParseStrings.cpp  ParseSupport.cpp  Parser.cpp  Parser.h  ParserImpl.h  Token.h  TokenKinds.inc.py  Tokens.h.py  Tokens.inc  tokens.py
libnixf/src/Sema/: Lowering.cpp  Lowering.h  ParentMap.cpp  PrimOpLookup.cpp  SemaActions.cpp  VariableLookup.cpp
libnixf/src/Serialize/: Serialize.cpp  Serialize.h
libnixf/test/: meson.build
libnixf/test/Basic/: Diagnostic.cpp  Nodes.cpp
libnixf/test/Bytecode/: Write.cpp
libnixf/test/Lex/: Lexer.cpp  meson.build
libnixf/test/Parse/: Comment.cpp  Lexer.cpp  ParseAttrs.cpp  ParseExpr.cpp  ParseLambda.cpp  ParseOp.cpp  ParseSimple.cpp  Parser.cpp  ParserAttrs.cpp  ParserExprDispatch.cpp  meson.build
libnixf/test/Sema/: Lowering.cpp  ParentMap.cpp  SemaActions.cpp  VariableLookup.cpp
libnixf/test/Syntax/: Syntax.cpp  Trivia.cpp  meson.build
libnixf/tools/: meson.build  nixf-tidy.cpp
libnixf/tools/nixf-ast-dump/: meson.build  nixf-ast-dump.cpp  termcolor.hpp
libnixf/tools/nixf-bc/: Main.cpp  README.md  meson.build
libnixt/: README.md  default.nix  meson.build
libnixt/include/nixt/: ArrayRef.h  BinOps.inc  Deserialize.h  Displacement.h  Eval.h  Flake.h  HackCache.h  HookExpr.h  InitEval.h  Kinds.h  Name.h  Nodes.inc  ParentMap.h  PtrPool.h  Serialize.h  Traverse.inc  Value.h  Visitor.h
libnixt/lib/: ASTReader.cpp  ASTReader.h  Deserialize.cpp  Displacement.cpp  Eval.cpp  Flake.cpp  HookExpr.cpp  Kinds.cpp  Name.cpp  ParentMap.cpp  Serialize.cpp  Value.cpp  meson.build
libnixt/test/: ASTReader.cpp  Deserialize.cpp  InitEval.cpp  Kinds.cpp  Serialize.cpp  StateTest.h  Value.cpp  meson.build
libnixt/test/ReaderData/: AllGrammars.cpp  ReaderData.h
libnixt/tools/: meson.build  nixt-decode.cpp
libnixt/tools/nixt-decode/: Main.cpp  meson.build
lspserver/: meson.build
lspserver/include/lspserver/: DraftStore.h  LSPBinder.h  LSPServer.h  Logger.h  Protocol.h
lspserver/src/: Connection.cpp  DraftStore.cpp  LSPServer.cpp  Protocol.cpp
nixd/: default.nix  meson.build
nixd/docs/: configuration.md  dev.md  editor-setup.md  features.md  nixd-schema.json  user-guide.md
nixd/docs/editors/: editors.md  nvim-lsp.nix  test-shell.nix  vscode-settings.json  vscodium.nix
nixd/docs/examples/: README.md
nixd/include/nixd/: AST.h  EvalDraftStore.h  Server.h
nixd/lib/: meson.build
nixd/lib/AST/: AST.cpp  AttrLocator.cpp  EvalAST.cpp  ParseAST.cpp  meson.build
nixd/lib/Basic/: Diagnostic.cpp  meson.build
nixd/librpc/: meson.build
nixd/libutil/: meson.build
nixd/lspserver/: meson.build
nixd/nix-node-eval/: README.md  meson.build
nixd/src/: AST.cpp  CallbackExpr.cpp  EvalDraftStore.cpp  Expr.cpp  JSONSerialization.cpp  ServerNixWorker.cpp
nixd/subprojects/: libnixf  libnixt
nixd/test/: ast.cpp  evalDraftStore.cpp  expr.cpp  nixutil.h  parser.cpp
nixd/tools/: meson.build  nix-node-eval.cpp  nixd-attrset-eval.cpp  nixd.cpp
tree-sitter-grammars/nix/: README.md  meson.build  parser.c  scanner.c
(+1008 files in other folders)
