tree_sitter = dependency('tree-sitter')

# libcpp_tree_sitter = library('cpp_tree_sitter',
#                              , include_directories: include_directories('include/ts')
#                              , dependencies: tree_sitter
#                              )


cpp_tree_sitter = declare_dependency( # link_with: libcpp_tree_sitter
                                      include_directories: include_directories('include'))
